# libspikehat_sim

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
docs/: using_color_sensor_component.md  using_distance_sensor_component.md  using_force_sensor_component.md
examples/: meshes  test_color_sensor.c  test_color_sensor.py  test_color_sensor.xml  test_color_sensor_viewer.py  test_distance_sensor.c  test_distance_sensor.py  test_distance_sensor.xml  test_distance_sensor_viewer.py  test_force_sensor.c  test_force_sensor.py  test_force_sensor.xml  test_force_sensor_auto.py  test_force_sensor_viewer.py  test_motor.c  test_motor.py  test_motor.xml  test_motor_viewer.py  test_motor_viewer2.py  test_sensor.c  test_sensor.py
examples/components/: color_sensor_body.xml  distance_sensor_body.xml  force_sensor_body.xml
examples/meshes/: base_plate.stl  button.stl  color_sensor.stl  distance_sensor.stl  force_sensor_body.stl  motor_body.stl  motor_rotor.stl  obstacle_wall_a.stl  press_block.stl  test_component_sensor.stl  test_inline_A.stl  test_inline_B.stl  tile_black.stl  tile_blue.stl  tile_brown.stl  tile_green.stl  tile_red.stl  tile_white.stl  tile_yellow.stl
include/: spikehat.h  spikehat_sim.h
python/: spikehat.py
src/: sim_spikehat.c
studio_model/: color_blocks.io  color_blocks.ldr  color_blocks_with_color_sensor.io  color_blocks_with_color_sensor.ldr  color_sensor.io  color_sensor.ldr  distance_sensor.io  distance_sensor.ldr  distance_sensor_Copy.io  distance_sensor_Copy.ldr  distance_sensor_test.io  distance_sensor_test.ldr  distance_sensor_test2.ldr  distance_sensor_unit.io  distance_sensor_unit.ldr  force_sensor.io  force_sensor.ldr  force_sensor_test.io  force_sensor_test.ldr  sonar_radar09.ldr
studio_model/blender/: blender_export_color_blocks.py  blender_export_color_blocks_log.txt  blender_export_color_blocks_with_sensor.py  blender_export_color_blocks_with_sensor_log.txt  blender_export_color_sensor.py  blender_export_color_sensor_log.txt  blender_export_distance_sensor.py  blender_export_distance_sensor_log.txt  blender_export_distance_sensor_test.py  blender_export_distance_sensor_test_log.txt  blender_export_force_sensor.py  blender_export_force_sensor_log.txt  blender_export_force_sensor_test.py  blender_export_force_sensor_test_log.txt  check_baked_cancel.py  color_blocks.blend  color_blocks.blend1  color_sensor.blend  color_sensor.blend1  distace_sensor_test.blend  distande_sensor.blend  distande_sensor.blend1  distande_sensor_test.blend  force_sensor.blend  force_sensor.blend1  force_sensor_test.blend  force_sensor_test.blend1  sistance_sensor_unit.blend  test_script_A_inline.py  test_script_A_log.txt  test_script_B_component.py  test_script_B_log.txt
